# simulate_three_nodes

./: .gitignore  Dockerfile  Dockerfile.qos  README.md  docker_guide.md  pyproject.toml  quick_reference.md  run_exogym_3nodes.sh  run_mnist_3nodes_diloco.py  run_network_experiments.sh  run_node0.sh  run_node1.sh  run_node2.sh  run_single_experiment.sh  run_three_nodes_gpu.sh  run_three_nodes_gpu_advanced.sh  setup_node.sh  simple_3node_test.py  three_node_simulation_guide.md  three_node_simulator.sh
DistributedSim/: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
DistributedSim/docs/: ExoGym_Code_Explanation.md  ExoGym_Documentation.md  ExoGym_Network_Simulation_Guide.md  Network_Simulation_Usage_Guide.md  README.md  index.md  network_simulator.py  run_mnist_3nodes.py  run_mnist_3nodes_with_network_sim.py
DistributedSim/example/: mnist.py  nanogpt.py
DistributedSim/example/nanogpt/: __init__.py  build_dataset.py  gpt_dataset.py  nanogpt.py
DistributedSim/exogym/: logger.py  train_node.py  trainer.py  utils.py
DistributedSim/exogym/strategy/: __init__.py  communicate_optimize_strategy.py  demo.py  diloco.py  federated_averaging.py  optim.py  sparta.py  sparta_diloco.py  strategy.py
docs/: ExoGym_Code_Explanation_Simplified.md  ExoGym_Documentation_Simplified.md  ExoGym_Network_Simulation_Guide_Simplified.md  Network_Simulation_Usage_Guide_Simplified.md  index.md
example/: mnist.py  nanogpt.py  playground.py
example/nanogpt/: dataset.py  download_dataset.py  nanogpt.py
exogym/: __init__.py  logger.py  train_node.py  trainer.py
exogym/strategy/: __init__.py  communicate.py  communicate_optimize_strategy.py  demo.py  diloco.py  federated_averaging.py  optim.py  sparta.py  sparta_diloco.py  strategy.py
exogym/strategy/demo_impl/: __init__.py  demo.py
qos_scripts/: measure_bandwidth.py  measure_latency.py  measure_packet_loss.py  run_all_measurements.sh
