[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exogym"
version = "0.1.0a1"
description = "EXO Gym: Open source framework for simulated distributed training methods"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Matt Beton", email = "matthew.beton@gmail.com"}
]
keywords = ["distributed training", "machine learning", "deep learning", "simulation", "federated learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
    "datasets>=2.0.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.12.0"]
gpt = ["transformers>=4.29.0"]
demo = ["einops>=0.6.0"]
examples = ["torchvision>=0.15.0"]
dev = [
    "wandb>=0.12.0",
    "boto3>=1.20.0",
    "einops>=0.6.0",
    "torchvision>=0.15.0",
    "transformers>=4.29.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950"
]
all = [
    "wandb>=0.12.0",
    "boto3>=1.20.0",
    "einops>=0.6.0",
    "torchvision>=0.15.0"
]

[project.urls]
Homepage = "https://github.com/MattyAB/DistributedSim"
Repository = "https://github.com/MattyAB/DistributedSim"
Issues = "https://github.com/MattyAB/DistributedSim/issues"

[tool.setuptools.packages.find]
include = ["exogym*"]
exclude = ["tests*"] 